fixed alignment bug for navigation and fixed bug for hero reel background position

--- a/src/assets/scss/pages/homepage.scss
+++ b/src/assets/scss/pages/homepage.scss
@@ -52,6 +52,7 @@ header {
     top: 0;
     left: 0;
     right: 0;
+    margin: 0;
     padding: 20px;
     height: 90px;
     overflow: hidden;
@@ -77,7 +78,7 @@ header {
 }
 
 .site-title {
-  font-size: 32px;
+  font-size: 26px;
   font-family: $font-gotham;
   text-transform: uppercase;
   @include bp(max-width, $tablet) {
@@ -143,7 +144,7 @@ header {
   a {
     font-size: 14px;
     margin-left: 40px;
-    top: -6px;
+    top: -2px;
     &.site-title {
       font-size: 32px;
       top: 0;
@@ -192,12 +193,11 @@ header {
   max-height: 500px;
   margin-left: var(--negative-offset);
   background-repeat: no-repeat;
-  background-position: 30% center;
+  background-position: center;
   background-color: black;
   background-size: cover;
   margin-bottom: 30px;
   @include bp(min-width, $notTablet) {
-    background-position: center;
   }
 }
 .play-button-holder {
